hopefully final tweak to mobile cutoff text issue

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -9,16 +9,6 @@
     // @include mqv(1000px) {
     //     justify-content: end;    
     // }
-    // align-items: end;
-    // h2,
-    // h3,
-    // h5,
-    // p,
-    // a {
-    // white-space: pre-wrap;
-    // }
-    overflow-wrap: break-word;
-    word-break: break-word;
     text-align: end;
     height: 100%;
     flex-direction: column;
