--- a/styles/style.css
+++ b/styles/style.css
@@ -707,8 +707,6 @@ footer .redBar2 {
 /* Index styles */
 /* Projects styles */
 .projects {
-  overflow-wrap: break-word;
-  word-break: break-word;
   text-align: end;
   height: 100%;
   -webkit-box-orient: vertical;
